# econ-db

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  api_demo.html  pyproject.toml  requirements.txt
app/: .match_mapping 2.py.icloud  build_export_cat.py  clean_raw_data.py  cleaner.ipynb  create_data_setting.py  create_mapping.py  depreciated_main.py  jp_export_test.pkl  load_new.py  load_new_v2.py  main.py  match_mapping 2.py  match_mapping.py  onboarding_pipeline.py  test_environment.ipynb  testmain.py
app/.ipynb_checkpoints/: test_environment-checkpoint.ipynb
app/db/cn/bop/a/: cn_bop_a_raw.csv  cn_bop_a_setting.csv  cn_bop_pickle_path.pkl
app/db/cn/bop/m/: cn_bop_m_setting.csv  cn_bop_pickle_path.pkl
app/db/cn/bop/q/: cn_bop_pickle_path.pkl  cn_bop_q_raw.csv  cn_bop_q_setting.csv
app/db/cn/data/export/: cn_export_m.csv
app/db/cn/data/gdp/: cn_gdp_q.csv
app/db/cn/export/m/: cn_export_m.csv  cn_export_m_raw.csv  cn_export_m_setting.csv  cn_export_m_setting_temp.csv  cn_export_pickle_path.pkl
app/db/cn/gdp/: .cn_gdp 2.csv.icloud  cn_gdp 2.csv
app/db/cn/gdp/q/: cn_gdp_pickle_path.pkl  cn_gdp_q.csv  cn_gdp_q_raw.csv  cn_gdp_q_setting.csv  cn_gdp_q_setting_temp.csv
app/db/cn/inflation/m/: cn_inflation_m.csv  cn_inflation_m_raw.csv  cn_inflation_m_setting.csv  cn_inflation_pickle_path.pkl
app/db/cn/ppi/m/: cn_ppi_m_setting.csv  cn_ppi_pickle_path.pkl
app/db/cn/sentiment/m/: cn_sentiment_m.csv  cn_sentiment_m_raw.csv  cn_sentiment_m_setting.csv  cn_sentiment_pickle_path.pkl
app/db/jp/bop/a/: jp_bop_pickle_path.pkl
app/db/jp/bop/m/: jp_bop_m_setting.csv  jp_bop_pickle_path.pkl
app/db/jp/bop/q/: jp_bop_pickle_path.pkl  jp_bop_q_setting.csv
app/db/jp/data/gdp/: 20230328 JP matching output.xlsx  20230425 JP match output.xlsx  check_template(JP).xlsx  jp_gdp_q.csv
app/db/jp/export/m/: jp_export_m.csv  jp_export_m_raw.csv  jp_export_m_setting.csv  jp_export_m_setting_temp.csv  jp_export_pickle_path.pkl
app/db/jp/gdp/q/: jp_gdp_pickle_path.pkl  jp_gdp_q.csv  jp_gdp_q_raw.csv  (+2 more)
app/db/mapping/export/: .export_mapping 2.csv.icloud  .export_mapping_template 2.xlsx.icloud  export_mapping.csv  export_mapping_template 2.xlsx  export_mapping_template.xlsx
app/db/mapping/gdp/: gdp_mapping.csv  gdp_mapping_template.xlsx
app/db/mapping/inflation/: inflation_mapping_template.xlsx
app/lib/: .export_matcher 2.py.icloud  .gdp_matcher 2.py.icloud  .mapping_generator 2.py.icloud  export_matcher 2.py  export_matcher.py  gdp_matcher.py  tools.py
app/lib/__pycache__/: .gdp_matcher.cpython-39 2.pyc.icloud  .mapping_generator.cpython-39 2.pyc.icloud
app/lib/cleaner/: bop_cleaner.py  cn_export_m.py  cn_gdp_q.py  cpi_cleaner.py  export.py  export_cleaner.py  exportcleaner.py  gdp.py  gdp_cleaner.py  gdpcleaner.py  inflation_cleaner.py  jp_export_m.py  kr_gdp_q.py  mxpi_cleaner.py  ppi_cleaner.py  sentiment_cleaner.py
app/lib/generator/: data_setting_generator.py  mapping_generator.py  number_unit_generator.py
app/lib/js_code/: download_button_callback.js
app/lib/matcher/: export_matcher.py  gdp_matcher.py
app/lib/style/: .select_styles 2.css.icloud  button_styles 2.css  button_styles.css  datatable_styles.css  select_styles 2.css  select_styles.css
app/lib/styles/: select_styles.css
app/lib/theme/: theme.yml
scripts/: README.md  update_and_pr.sh
(+103 files in other folders)
