[tool.black]
line-length = 79
include = "\\.pyi?$"
exclude = """
(
   /(
      \\.eggs         # exclude a few common directories in the
    | \\.git          # root of the project
    | \\.hg
    | \\.mypy_cache
    | \\.tox
    | \\.venv
    | _build
    | buck-out
    | build
    | dist
    )/
)
"""

[tool.isort]
# black compatibility
profile = "black"
# cuctom section
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = []
known_local_folder = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

#
# [tool.poetry]
# name = "portfolio_manager"
# version = "0.1.0"
# description = ""
# authors = ["Your Name <you@example.com>"]
#
# [tool.poetry.dependencies]
# python = "^3.8"
# aiohttp = "2.3.10"
# APScheduler = "3.6.3"
# async-timeout = "2.0.1"
# attrs = "20.3.0"
# base58 = "2.0.1"
# bitarray = "1.2.2"
# bitmex = "0.2.2"
# bravado = "10.4.1"
# bravado-core = "5.17.0"
# cachetools = "4.2.1"
# certifi = "2020.12.5"
# chardet = "4.0.0"
# cytoolz = "0.11.0"
# dateparser = "1.0.0"
# eth-abi = "2.1.1"
# eth-account = "0.5.4"
# eth-hash = {version = "0.2.0", extras = ["pycryptodome"]}
# eth-keyfile = "0.5.1"
# eth-keys = "0.3.3"
# eth-rlp = "0.2.1"
# eth-typing = "2.2.2"
# eth-utils = "1.9.5"
# google-api-core = "1.23.0"
# google-api-python-client = "1.12.8"
# google-auth = "1.23.0"
# google-auth-httplib2 = "0.0.4"
# google-auth-oauthlib = "0.4.1"
# googleapis-common-protos = "1.52.0"
# hexbytes = "0.2.1"
# html2text = "2020.1.16"
# httplib2 = "0.18.1"
# idna = "2.10"
# idna_ssl = "1.1.0"
# importlib-metadata = "2.1.1"
# ipfshttpclient = "0.7.0a1"
# Jinja2 = "2.11.2"
# jsonpointer = "2.0"
# jsonref = "0.2"
# jsonschema = {version = "3.2.0", extras = ["format"]}
# lru-dict = "1.1.6"
# MarkupSafe = "1.1.1"
# monotonic = "1.5"
# msgpack = "1.0.2"
# msgpack-python = "0.5.6"
# multiaddr = "0.0.9"
# multidict = "5.0.2"
# mysql-connector-python = "8.0.22"
# netaddr = "0.8.0"
# numpy = "1.18.5"
# oauthlib = "3.1.0"
# pandas = "0.25.2"
# parsimonious = "0.8.1"
# prometheus-client = "0.9.0"
# protobuf = "3.14.0"
# pyasn1 = "0.4.8"
# pyasn1-modules = "0.2.8"
# pycoin = "0.80"
# pycryptodome = "3.9.9"
# pyee = "8.1.0"
# PyMySQL = "0.10.1"
# pyrsistent = "0.17.3"
# pysha3 = "1.0.2"
# python-dateutil = "2.8.1"
# pytz = "2020.5"
# PyYAML = "5.3.1"
# regex = "2020.11.13"
# requests = "2.25.1"
# requests-oauthlib = "1.3.0"
# rfc3987 = "1.3.8"
# rlp = "2.0.1"
# rsa = "4.7.2"
# simplejson = "3.17.2"
# six = "1.15.0"
# SQLAlchemy = "1.3.22"
# strict-rfc3339 = "0.7"
# swagger-spec-validator = "2.7.3"
# toolz = "0.11.1"
# typing-extensions = "3.7.4.3"
# tzlocal = "2.1"
# uritemplate = "3.0.1"
# urllib3 = "1.24.2"
# varint = "1.0.2"
# web3 = "5.13.1"
# webcolors = "1.11.1"
# websocket-client = "0.57.0"
# websockets = "8.1"
# xlrd = "1.2.0"
# yarl = "1.6.0"
# zipp = "1.2.0"
#
# [tool.poetry.dev-dependencies]
# flake8 = "3.7.7"
# pyflakes = "2.1.1"
# pytest = "4.4.1"
# pytest-cov = "2.6.1"
# pytest-mock = "1.10.4"
# pytest-runner = "4.4"
# pre-commit = "2.15.0"
# mypy = "0.910"
# types-requests = "2.26.0"
#
# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"